refactor: intellij suggestions for better practices